// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformNodesMissingContent lists when list nodes have invalid children should create valid listItem nodes for bulletList with text 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "text": "text",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`transformNodesMissingContent lists when list nodes have invalid children should create valid listItem nodes for orderedList with text 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "text": "text",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`transformNodesMissingContent lists when nodes are invalidly empty should create valid filler content for bulletList 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "content": [],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`transformNodesMissingContent lists when nodes are invalidly empty should create valid filler content for orderedList 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "content": [],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`transformNodesMissingContent mediaSingle is removed when has no children when content is an empty array 1`] = `
{
  "content": [],
  "type": "doc",
  "version": 1,
}
`;

exports[`transformNodesMissingContent mediaSingle is removed when has no children when content is null 1`] = `
{
  "content": [],
  "type": "doc",
  "version": 1,
}
`;

exports[`transformNodesMissingContent tables when nodes are invalidly empty should create valid filler content for tableCell (with attributes) 1`] = `
{
  "content": [
    {
      "attrs": {
        "isNumberColumnEnabled": false,
        "layout": "default",
        "localId": "123",
      },
      "content": [
        {
          "content": [
            {
              "attrs": {
                "colwidth": [
                  502,
                ],
              },
              "content": [
                {
                  "content": [],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            {
              "attrs": {
                "colwidth": [
                  258,
                ],
              },
              "content": [
                {
                  "content": [],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
}
`;

exports[`transformNodesMissingContent tables when nodes are invalidly empty should create valid filler content for tableCell 1`] = `
{
  "content": [
    {
      "attrs": {
        "isNumberColumnEnabled": false,
        "layout": "default",
        "localId": "123",
      },
      "content": [
        {
          "content": [
            {
              "attrs": {},
              "content": [
                {
                  "content": [],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`transformNodesMissingContent tables when nodes are invalidly empty should create valid filler content for tableRow (while alongside valid non-empty tableRows) 1`] = `
{
  "content": [
    {
      "attrs": {
        "isNumberColumnEnabled": false,
        "layout": "default",
        "localId": "123",
      },
      "content": [
        {
          "content": [
            {
              "attrs": {},
              "content": [
                {
                  "content": [],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            {
              "attrs": {},
              "content": [
                {
                  "content": [],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        {
          "content": [
            {
              "attrs": {},
              "content": [
                {
                  "content": [],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            {
              "attrs": {},
              "content": [
                {
                  "content": [],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`transformNodesMissingContent tables when nodes are invalidly empty should create valid filler content for tableRow 1`] = `
{
  "content": [
    {
      "attrs": {
        "isNumberColumnEnabled": false,
        "layout": "default",
        "localId": "123",
      },
      "content": [
        {
          "content": [
            {
              "attrs": {},
              "content": [
                {
                  "content": [],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`transformNodesMissingContent tables when table nodes have invalid children should create valid tableRow nodes for table with text 1`] = `
{
  "content": [
    {
      "attrs": {
        "isNumberColumnEnabled": false,
        "layout": "default",
        "localId": "123",
      },
      "content": [
        {
          "content": [
            {
              "attrs": {},
              "content": [
                {
                  "content": [
                    {
                      "text": "text",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;
